--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,14 @@ buildscript {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
+		maven {
+			name = "ic2"
+			url = "http://maven.ic2.player.to/"
+		}
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+		compile 'net.industrial-craft:industrialcraft-2:2.1.470-experimental:api'
     }
 }
 
