--- a/build.gradle
+++ b/build.gradle
@@ -9,14 +9,10 @@ buildscript {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
-		maven {
-			name = "ic2"
-			url = "http://maven.ic2.player.to/"
-		}
-    }
+	}
+		
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
-		compile 'net.industrial-craft:industrialcraft-2:2.1.470-experimental:api'
+		classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
     }
 }
 
@@ -31,6 +27,18 @@ minecraft {
     runDir = "eclipse"
 }
 
+repositories { 
+ 	maven { 
+ 		name = "ic2" 
+ 		url = "http://maven.ic2.player.to/" 
+ 	} 
+} 
+
+configurations { 
+	api 
+ 	compile.extendsFrom api 
+} 
+
 dependencies {
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
@@ -38,12 +46,13 @@ dependencies {
     //compile "some.group:artifact:version"
       
     // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
+    compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
     //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
 
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
+	api 'net.industrial-craft:industrialcraft-2:2.2.660-experimental:api'
 
 }
 
