--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,12 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+version = "0.0.2"
+group= "goodtime.mod.Industrial" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "GTI"
 
 minecraft {
-    version = "1.7.10-10.13.2.1230"
+    version = "1.7.10-10.13.2.1291"
     runDir = "eclipse"
 }
 
@@ -46,13 +46,13 @@ dependencies {
     //compile "some.group:artifact:version"
       
     // real examples
-    compile 'com.mod-buildcraft:buildcraft:6.3.4:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
+    api 'com.mod-buildcraft:buildcraft:6.3.5:api'  // adds buildcraft to the dev env
+    compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
+    compile 'net.industrial-craft:industrialcraft-2:2.2.673-experimental:dev'
 
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
-	api 'net.industrial-craft:industrialcraft-2:2.2.660-experimental:api'
 
 }
 
