--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ before_install:
   - git clone https://github.com/CovertJaguar/Railcraft-API.git ../api/railcraft
   - git clone https://github.com/ForestryMC/ForestryAPI.git ../api/forestry
   - git clone https://github.com/Azanor/thaumcraft-api.git ../api/thaumcraft
-install: ./gradle setupCIWorkspace -S
-script: ./gradle build
+install: gradle setupCIWorkspace -S
+script: gradle build
 notifications:
   email: false
 env:
