--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,11 @@
-sudo: false
 language: java
 jdk:
   - openjdk6
   - openjdk7
   - oraclejdk7
   - oraclejdk8
-before_install: 
-  - git clone https://github.com/CovertJaguar/Railcraft-API.git ../api/railcraft
-  - git clone https://github.com/ForestryMC/ForestryAPI.git ../api/forestry
-  - git clone https://github.com/Azanor/thaumcraft-api.git ../api/thaumcraft
 install: gradle setupCIWorkspace -S
-script: gradle build
+script: gradle build -S
 notifications:
   email: false
 env:
