--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ buildscript {
 apply plugin: 'forge'
 
 version = "0.0.3"
-group= "goodtime.mod.Industrial" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "GoodTimeIndustrial"
+group= "com.mcgoodtime" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "gti"
 
 minecraft {
     version = "1.7.10-10.13.2.1230"
@@ -46,10 +46,11 @@ dependencies {
     //compile "some.group:artifact:version"
       
     // real examples
-    api 'com.mod-buildcraft:buildcraft:6.3.1:api'  // adds buildcraft to the api env
+    // real examples
+    api 'com.mod-buildcraft:buildcraft:6.4.6:api'  // adds buildcraft to the api env
     // api 'net.sengir.forestry:forestry_1.7.10:3.4.0.7:api' // adds forestry to the api env
     compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-    compile 'net.industrial-craft:industrialcraft-2:2.2.660-experimental:dev' //adds newest ic2 to the dev env
+    compile 'net.industrial-craft:industrialcraft-2:2.2.706-experimental:dev' //adds newest ic2 to the dev env
 
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
