--- a/build.gradle
+++ b/build.gradle
@@ -17,22 +17,28 @@ buildscript {
 }
 
 apply plugin: 'forge'
+apply plugin: 'checkstyle'
 
 version = "0.0.3"
 group= "com.mcgoodtime"
 archivesBaseName = "gti"
 
-minecraft {
-    version = "1.7.10-10.13.3.1378-1.7.10"
-    runDir = "eclipse"
+repositories {
+    maven {
+        name = "ic2"
+        url = "http://maven.ic2.player.to/"
+    }
 }
 
-repositories { 
- 	maven { 
- 		name = "ic2" 
- 		url = "http://maven.ic2.player.to/" 
- 	} 
-} 
+dependencies {
+    compile 'net.industrial-craft:industrialcraft-2:2.2.717-experimental:dev' //adds newest ic2 to the dev env
+    checkstyle 'com.puppycrawl.tools:checkstyle:6.5'
+}
+
+minecraft {
+    version = "1.7.10-10.13.2.1230"
+    runDir = "eclipse"
+}
 
 configurations { 
 	api 
@@ -58,10 +64,6 @@ sourceSets {
     }
 }
 
-dependencies {  
-    compile 'net.industrial-craft:industrialcraft-2:2.2.717-experimental:dev' //adds newest ic2 to the dev env
-}
-
 processResources
 {
     inputs.property "version", project.version
@@ -74,3 +76,16 @@ processResources
         exclude 'mcmod.info'
     }
 }
+
+checkstyle {
+    configFile = file('checkstyle.xml')
+    configProperties = [
+            "name" : 'GoodTime-Industrial',
+            "organization" : 'Minecraft-GoodTime',
+            "url" : 'https://github.com/Minecraft-GoodTime/GoodTime-Industrial',
+            "year" : '2015',
+            "basedir": project.projectDir,
+            "severity": 'warning'
+    ]
+}
+tasks.jar.dependsOn "check"
