--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk:
   - openjdk6
   - openjdk7
   - oraclejdk7
-  - oraclejdk8
+  # - oraclejdk8
 install: gradle setupCIWorkspace -S
 script: gradle build -S
 notifications:
