Forgot fry's fault

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 }
 
 minecraft {
-    version = "1.7.10-10.13.3.1401-1.7.10"
+    version = "1.7.10-10.13.3.1401-1.7.10ls"
     runDir = "eclipse"
 }
 
