--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: java
 jdk:
-   # - openjdk6 -not supporting checkstyle
   - openjdk7
   - oraclejdk7
   - oraclejdk8
-install: gradle setupCIWorkspace -S
-script: gradle build -S
+before_install: 
+  - chmod +x gradlew
+  - ./gradlew clean cleanCache
+install: ./gradlew setupCIWorkspace -S
+script: ./gradlew build -S
 notifications:
   email: false
 env:
