--- a/build.gradle
+++ b/build.gradle
@@ -9,17 +9,16 @@ buildscript {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
-    }
-		
-    dependencies {
-	classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+		dependencies {
+		classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+		}
     }
 }
 
 apply plugin: 'forge'
 apply plugin: 'checkstyle'
 
-version = "dev 0.0.5"
+version = "dev.0.1." + getBuildNumber()
 group= "com.mcgoodtime.gti"
 archivesBaseName = "gti"
 
@@ -80,4 +79,9 @@ checkstyle {
             "severity": 'warning'
     ]
 }
+
+def getBuildNumber() {
+	return "$System.env.BUILD_NUMBER" != "null" ? "$System.env.BUILD_NUMBER" : "0"
+}
+
 tasks.jar.dependsOn "check"
