--- a/build.gradle
+++ b/build.gradle
@@ -5,18 +5,14 @@ buildscript {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
-		dependencies {
-		    classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
-		}
+	dependencies {
+	    classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+	}
     }
 }
 
 apply plugin: 'forge'
-//apply plugin: 'checkstyle'
+apply plugin: 'checkstyle'
 
 
 version = "dev.0.1." + getBuildNumber()
@@ -32,7 +28,7 @@ repositories {
 
 dependencies {
     compile 'net.industrial-craft:industrialcraft-2:2.2.742-experimental:dev' //adds newest ic2 to the dev env
-    //checkstyle 'com.puppycrawl.tools:checkstyle:6.5'
+    checkstyle 'com.puppycrawl.tools:checkstyle:6.5'
 }
 
 minecraft {
@@ -62,6 +58,11 @@ idea {
     } 
 }
 
+task deobfJar(type: Jar) {
+    from sourceSets.main.output
+    classifier = 'dev'
+}
+
 processResources
 {
     inputs.property "version", project.version
@@ -74,7 +75,7 @@ processResources
         exclude 'mcmod.info'
     }
 }
-/*
+
 checkstyle {
     configFile = file('checkstyle.xml')
     configProperties = [
@@ -83,10 +84,10 @@ checkstyle {
             "url" : 'https://github.com/Minecraft-GoodTime/GoodTime-Industrial',
             "year" : '2015',
             "basedir": project.projectDir,
-            "severity": 'warning'
+            "severity": 'fatal'
     ]
 }
-*/
+
 def getBuildNumber() {
 	return "$System.env.BUILD_NUMBER" != "null" ? "$System.env.BUILD_NUMBER" : "0"
 }
