Add jboss-serialization libraries

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ configurations {
 dependencies {
     shade 'org.spongepowered:mixin:0.4.5-SNAPSHOT'
     compile 'net.industrial-craft:industrialcraft-2:2.2.748-experimental:dev' //adds newest ic2 to the dev env
+    compile fileTree(dir:'lib',include:"*.jar")
     checkstyle 'com.puppycrawl.tools:checkstyle:6.7' //GRADLE-3314 gradle bug, not resolved
 }
 
