--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ repositories {
         name = "sponge"
         url = "http://repo.spongepowered.org/maven"
     }
+    maven {
+        name = "chickenbones"
+        url = "http://chickenbones.net/maven"
+    }
 }
 
 configurations {
@@ -39,7 +43,8 @@ configurations {
 dependencies {
     shade 'org.spongepowered:mixin:0.4.5-SNAPSHOT'
     compile 'net.industrial-craft:industrialcraft-2:2.2.748-experimental:dev' //adds newest ic2 to the dev env
-    compile fileTree(dir:'lib',include:"*.jar")
+    compile 'codechicken:NotEnoughItems:1.7.10-1.0.3.74:dev'
+    compile 'codechicken:CodeChickenCore:1.7.10-1.0.4.29:dev'
     checkstyle 'com.puppycrawl.tools:checkstyle:6.7' //GRADLE-3314 gradle bug, not resolved
 }
 
