--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     compile 'net.industrial-craft:industrialcraft-2:2.2.748-experimental:dev' //adds newest ic2 to the dev env
     compile 'codechicken:NotEnoughItems:1.7.10-1.0.4.79:dev'
     compile 'codechicken:CodeChickenCore:1.7.10-1.0.4.29:dev'
-    compile fileTree(dir:'lib',include:"*.jar")
+    compile 'codechicken:CodeChickenLib:1.7.10-1.1.1.99:dev'
     checkstyle 'com.puppycrawl.tools:checkstyle:6.7' //GRADLE-3314 gradle bug, not resolved
 }
 
