--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import scala.tools.nsc.io.Jar
+
 buildscript {
     repositories {
         mavenCentral()
@@ -47,6 +49,13 @@ dependencies {
     compile 'codechicken:CodeChickenCore:1.7.10-1.0.4.29:dev'
     compile 'codechicken:CodeChickenLib:1.7.10-1.1.1.99:dev'
     checkstyle 'com.puppycrawl.tools:checkstyle:6.7' //GRADLE-3314 gradle bug, not resolved
+}
+
+jar {
+    manifest {
+        attributes 'FMLCorePlugin': 'com.mcgoodtime.gti.common.core.coremod.GtiCore'
+        attributes 'FMLAT': 'gti_at.cfg'
+    }
 }
 
 minecraft {
