--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import scala.tools.nsc.io.Jar
-
 buildscript {
     repositories {
         mavenCentral()
@@ -16,7 +14,7 @@ buildscript {
 apply plugin: 'forge'
 apply plugin: 'checkstyle'
 
-version = "dev.0.1." + getBuildNumber()
+version = "dev.0.2" + getBuildNumber()
 group= "com.mcgoodtime.gti"
 archivesBaseName = "gti"
 
@@ -106,8 +104,7 @@ task deobfJar(type: Jar) {
     classifier = 'dev'
 }
 
-processResources
-{
+processResources {
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
     from (sourceSets.main.resources.srcDirs) {
@@ -124,7 +121,7 @@ checkstyle {
     configProperties = [
             "name" : 'GoodTime-Industrial',
             "organization" : 'Minecraft-GoodTime',
-            "url" : 'https://github.com/Minecraft-GoodTime/GoodTime-Industrial',
+            "url" : 'https://github.com/GoodTimeStudio/GoodTime-Industrial',
             "year" : '2015',
             "basedir": project.projectDir,
             "severity": 'warning'
@@ -132,31 +129,7 @@ checkstyle {
 }
 
 def getBuildNumber() {
-	return "$System.env.BUILD_NUMBER" != "null" ? "$System.env.BUILD_NUMBER" : "0"
+	return "$System.env.BUILD_NUMBER" != "null" ? "." + Integer.parseInt("$System.env.BUILD_NUMBER") : ""
 }
 
-class ChangeBuildNumTask extends DefaultTask {
-    @TaskAction
-    def changeBuildNumber() {
-        File file = new File("./src/main/resources/mcmod.info");
-        String num = "$System.env.BUILD_NUMBER"
-        if (num) {
-            String mcmodinfo = file.getText().replace("{BUILD_NUM}", num);
-            try {
-                FileOutputStream fos = new FileOutputStream(file);
-                OutputStreamWriter osw = new OutputStreamWriter(fos , "UTF-8");
-                BufferedWriter bw = new BufferedWriter(osw);
-                bw.write(mcmodinfo);
-
-                bw.close();
-                osw.close();
-                fos.close();
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
-        }
-    }
-}
-
-task changeBuildNum(type: ChangeBuildNumTask)
 tasks.jar.dependsOn "check"
