--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,14 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
     }
 }
 
-apply plugin: 'forge'
+apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'checkstyle'
 
-version = "dev.0.3" + getBuildNumber()
+version = "dev.0.3.1" + getBuildNumber()
 group= "com.mcgoodtime.productionline"
 archivesBaseName = "ProductionLine"
 
@@ -40,10 +40,10 @@ configurations {
 
 dependencies {
     shade 'org.spongepowered:mixin:0.4.5-SNAPSHOT'
-    compile 'net.industrial-craft:industrialcraft-2:2.2.800-experimental:dev' //adds ic2 to the dev env
-    compile 'codechicken:NotEnoughItems:1.7.10-1.0.4.79:dev'
-    compile 'codechicken:CodeChickenCore:1.7.10-1.0.4.29:dev'
-    compile 'codechicken:CodeChickenLib:1.7.10-1.1.1.99:dev'
+    compile 'net.industrial-craft:industrialcraft-2:2.3.131-ex18:dev' //adds ic2 to the dev env
+    //compile 'codechicken:NotEnoughItems:1.7.10-1.0.4.79:dev'
+    //compile 'codechicken:CodeChickenCore:1.7.10-1.0.4.29:dev'
+    //compile 'codechicken:CodeChickenLib:1.7.10-1.1.1.99:dev'
     checkstyle 'com.puppycrawl.tools:checkstyle:6.7' //GRADLE-3314 gradle bug, not resolved
 }
 
@@ -66,8 +66,9 @@ jar {
 }
 
 minecraft {
-    version = "1.7.10-10.13.4.1558-1.7.10"
-    runDir = "eclipse"
+    version = "1.8.9-11.15.1.1722"
+    runDir = "run"
+    mappings = "stable_22"
 }
 
 checkstyle { 
@@ -83,7 +84,7 @@ compileJava {
 }
 
 task copySrgs(type: Copy, dependsOn: 'genSrgs') {
-    from project.plugins.getPlugin('forge').delayedFile('{SRG_DIR}')
+    from project.plugins.getPlugin('net.minecraftforge.gradle.forge').delayedFile('{SRG_DIR}')
 
     include '**/*.srg'
     into 'build/srgs'
