--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
@@ -14,9 +14,15 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'checkstyle'
 
-version = "dev.0.3.1" + getBuildNumber()
+version = "dev.0.4" + getBuildNumber()
 group= "com.mcgoodtime.productionline"
 archivesBaseName = "ProductionLine"
+
+minecraft {
+    version = "1.8.9-11.15.1.1902-1.8.9"
+    runDir = "run"
+    mappings = "stable_22"
+}
 
 repositories {
     maven {
@@ -27,10 +33,6 @@ repositories {
         name = "sponge"
         url = "http://repo.spongepowered.org/maven"
     }
-    maven {
-        name = "chickenbones"
-        url = "http://chickenbones.net/maven"
-    }
 }
 
 configurations {
@@ -39,11 +41,8 @@ configurations {
 }
 
 dependencies {
-    shade 'org.spongepowered:mixin:0.4.5-SNAPSHOT'
-    compile 'net.industrial-craft:industrialcraft-2:2.3.131-ex18:dev' //adds ic2 to the dev env
-    //compile 'codechicken:NotEnoughItems:1.7.10-1.0.4.79:dev'
-    //compile 'codechicken:CodeChickenCore:1.7.10-1.0.4.29:dev'
-    //compile 'codechicken:CodeChickenLib:1.7.10-1.1.1.99:dev'
+    compile 'org.spongepowered:mixin:0.5.6-SNAPSHOT'
+    compile 'net.industrial-craft:industrialcraft-2:2.3.251-ex18:dev' //adds ic2 to the dev env
     checkstyle 'com.puppycrawl.tools:checkstyle:6.7' //GRADLE-3314 gradle bug, not resolved
 }
 
@@ -65,14 +64,19 @@ jar {
     }
 }
 
-minecraft {
-    version = "1.8.9-11.15.1.1722"
-    runDir = "run"
-    mappings = "stable_22"
-}
-
 checkstyle { 
     toolVersion = "6.7" 
+}
+
+sourceSets {
+    main {
+        java {
+            srcDir 'src/main/java'
+        }
+        resources {
+            srcDir 'src/main/resources'
+        }
+    }
 }
 
 compileJava {
@@ -91,17 +95,6 @@ task copySrgs(type: Copy, dependsOn: 'genSrgs') {
 }
 compileJava.dependsOn copySrgs
 
-sourceSets {
-    main {
-        java {
-            srcDir 'src/main/java'
-        }
-        resources {
-            srcDir 'src/main/resources'
-        }
-    }
-}
-
 idea { 
     module {
         inheritOutputDirs = true 
@@ -116,10 +109,12 @@ task deobfJar(type: Jar) {
 processResources {
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
+	
     from (sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
         expand 'version' : project.version, 'mcversion' : project.minecraft.version
     }
+	
     from (sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
