--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
     }
 }
 
@@ -19,20 +19,24 @@ group= "com.mcgoodtime.productionline"
 archivesBaseName = "ProductionLine"
 
 minecraft {
-    version = "1.8.9-11.15.1.1902-1.8.9"
+    version = "1.10.2-12.18.1.2011"
     runDir = "run"
-    mappings = "stable_22"
+    mappings = "snapshot_20160518"
 }
 
 repositories {
     maven {
         name = "ic2"
-        url = "http://maven.ic2.player.to/"
+        url = "http://maven.ic2.player.to"
     }
     maven {
         name = "sponge"
         url = "http://repo.spongepowered.org/maven"
     }
+	maven {
+		name = "jei"
+		url = "http://dvs1.progwml6.com/files/maven"
+	}
 }
 
 configurations {
@@ -42,15 +46,23 @@ configurations {
 
 dependencies {
     compile 'org.spongepowered:mixin:0.4.4'
-    compile 'net.industrial-craft:industrialcraft-2:2.3.251-ex18:dev' //adds ic2 to the dev env
+    compile 'net.industrial-craft:industrialcraft-2:2.6.46-ex110' //adds ic2 to the dev env
+	compile 'mezz.jei:jei_1.10.2:3.9.0.246'
     checkstyle 'com.puppycrawl.tools:checkstyle:6.7' //GRADLE-3314 gradle bug, not resolved
 }
 
 jar {
-	configurations.shade.copyRecursive().setTransitive(false).each { artifact ->
+	/*configurations.shade.copyRecursive().setTransitive(false).each { artifact ->
 		from (zipTree(artifact))
-	}
-	
+	}*/
+
+    configurations.shade.each { dep ->
+        from(project.zipTree(dep)){
+            exclude 'META-INF', 'META-INF/**'
+        }
+    }
+
+
     manifest {
 		attributes (
             'FMLCorePlugin': 'com.mcgoodtime.productionline.common.core.coremod.PLCore',
