use java8, fixed some treetaps

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ version = "dev.0.4" + getBuildNumber()
 group= "com.mcgoodtime.productionline"
 archivesBaseName = "ProductionLine"
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 minecraft {
     version = "1.10.2-12.18.1.2094"
     runDir = "run"
