--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,26 @@
 buildscript {
     repositories {
+        maven {
+            name = "forge"
+            url = "https://files.minecraftforge.net/maven"
+        }
         jcenter()
+        mavenCentral()
+        /*
         maven {
-            name = 'forge'
-            url = 'https://files.minecraftforge.net/maven'
+            name = "sponge"
+            url = "http://repo.spongepowered.org/maven"
         }
-        maven {
-
-            url = 'http://repo.spongepowered.org/maven'
-        }
+        */
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
-        classpath 'org.spongepowered:mixingradle:0.6-SNAPSHOT'
+        //classpath 'org.spongepowered:mixingradle:0.4-SNAPSHOT'
     }
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
-apply plugin: 'org.spongepowered.mixin'
+//apply plugin: 'org.spongepowered.mixin'
 
 version = "dev.0.6" + getBuildNumber()
 group= "com.mcgoodtime.productionline"
@@ -25,10 +28,49 @@ archivesBaseName = "ProductionLine"
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
-sourceSets {
-    main {
-        ext.refMap = 'mixins.productionline.refmap.json'
+minecraft {
+    version = "1.12.2-14.23.5.2847"
+    runDir = "run"
+    
+    // the mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   snapshot are built nightly.
+    // stable_#            stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not always work.
+    // simply re-run your setup task after changing the mappings to update your workspace.
+    mappings = "snapshot_20171003"
+    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+}
+
+repositories {
+    maven {
+        name = "ic2"
+        url = "https://maven.ic2.player.to"
     }
+    maven {
+        name = "sponge"
+        url = "http://repo.spongepowered.org/maven"
+    }
+    maven {
+        name = "botania"
+        url = "https://maven.blamejared.com/"
+    }
+    maven  {
+        name = "baubles"
+        url = "https://maven.thiakil.com"
+    }
+	maven {
+		name = "jei"
+		url = "http://dvs1.progwml6.com/files/maven"
+	}
+}
+
+dependencies {
+    compile 'net.industrial-craft:industrialcraft-2:2.8.209-ex112:dev' //adds ic2 to the dev env
+    deobfCompile "vazkii.botania:Botania:r1.10-363.148"
+    deobfCompile "com.azanor.baubles:Baubles:1.12-1.5.2"
+    //compile ('org.spongepowered:mixin:0.6.+') {
+    //    exclude module: 'launchwrapper'
+    //}
 }
 
 processResources {
@@ -39,91 +81,17 @@ processResources {
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-
+                
         // replace version and mcversion
-        expand 'version': project.version, 'mcversion': project.minecraft.version
+        expand 'version':project.version, 'mcversion':project.minecraft.version
     }
-
-    // copy everything else, thats not the mcmod.info
+        
+    // copy everything else except the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
-
-    rename '(.+_at.cfg)', 'META-INF/$1'
-}
-
-minecraft {
-    version = "1.12.2-14.23.5.2847"
-    runDir = 'run'
-
-    // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not always work.
-    // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20171003"
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-
-    def args = [
-            '-Dfml.coreMods.load=com.productionline.asm.MODCoremod',
-            '-Dmixin.hotSwap=true',
-            '-Dmixin.checks.interfaces=true'
-    ]
-    clientJvmArgs.addAll(args)
-    serverJvmArgs.addAll(args)
-}
-
-configurations {
-    embed
-    compile.extendsFrom(embed)
-}
-
-repositories {
-    //mavenCentral()
-    maven {
-        name = "ic2"
-        url = "https://maven.ic2.player.to"
-    }
-    maven {
-        url = 'http://repo.spongepowered.org/maven'
-    }
-    maven {
-        name = "botania"
-        url = "https://maven.blamejared.com/"
-    }
-    maven  {
-        name = "baubles"
-        url = "https://maven.thiakil.com"
-    }
-    maven {
-        name = "jei"
-        url = "http://dvs1.progwml6.com/files/maven"
-    }
-}
-
-dependencies {
-    compile 'net.industrial-craft:industrialcraft-2:2.8.209-ex112:dev' //adds ic2 to the dev env
-    deobfCompile "vazkii.botania:Botania:r1.10-363.148"
-    deobfCompile "com.azanor.baubles:Baubles:1.12-1.5.2"
-    embed('org.spongepowered:mixin:0.7.11-SNAPSHOT'){
-        transitive = false
-    }
-}
-
-jar {
-    from(configurations.embed.collect { it.isDirectory() ? it : zipTree(it) }) {
-        exclude 'LICENSE.txt', 'META-INF/MANIFSET.MF', 'META-INF/maven/**', 'META-INF/*.RSA', 'META-INF/*.SF'
-    }
-
-    manifest.attributes(
-            'FMLCorePluginContainsFMLMod': true,
-            'ForceLoadAsMod': true,
-            'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
-            'MixinConfigs': 'mixins.productionline.core.json',
-            'FMLCorePlugin': 'com.productionline.asm.MODCoremod'
-    )
 }
 
 static def getBuildNumber() {
-    return "$System.env.BUILD_NUMBER" != "null" ? "." + Integer.parseInt("$System.env.BUILD_NUMBER") : ""
+	return "$System.env.BUILD_NUMBER" != "null" ? "." + Integer.parseInt("$System.env.BUILD_NUMBER") : ""
 }
